Definir html del proyecto

--- a/index.html
+++ b/index.html
@@ -39,31 +39,111 @@
         </div>
 
         <!-- Calificaciones de estrellas -->
-         <div class="ratings">
+        <div class="ratings">
           <div class="rating">
             <div class="stars">
-              <img src="./images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="start" />
+              <img src="./images/icon-star.svg" alt="start" />
+              <img src="./images/icon-star.svg" alt="start" />
+              <img src="./images/icon-star.svg" alt="start" />
+              <img src="./images/icon-star.svg" alt="start" />
+            </div>
+            <p class="rating-text">Rated 5 Stars in Reviews</p>
+          </div>
+          <div class="rating">
+            <div class="stars">
+              <img src="./images/icon-star.svg" alt="start" />
+              <img src="./images/icon-star.svg" alt="start" />
+              <img src="./images/icon-star.svg" alt="start" />
+              <img src="./images/icon-star.svg" alt="start" />
+              <img src="./images/icon-star.svg" alt="start" />
+            </div>
+            <p class="rating-text">Rated 5 Stars in Report Guru</p>
+          </div>
+          <div class="rating">
+            <div class="stars">
+              <img src="./images/icon-star.svg" alt="start" />
+              <img src="./images/icon-star.svg" alt="start" />
+              <img src="./images/icon-star.svg" alt="start" />
+              <img src="./images/icon-star.svg" alt="start" />
+              <img src="./images/icon-star.svg" alt="start" />
+            </div>
+            <p class="rating-text">Rated 5 Stars in BestTech</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Testimonios de usuarios-->
+
+      <div class="testimonials">
+        <div class="testimonial">
+          <div class="info">
+            <div class="user-info">
+              <img
+                src="./images/image-colton.jpg"
+                alt="Colton Smith"
+                class="user-image"
+              />
+              <div class="user-details">
+                <h3 class="user-name">Colton Smith</h3>
+                <p class="user-role">Verified Buyer</p>
+              </div>
             </div>
           </div>
-         </div>
+          <p class="story">
+            "We needed the same printed design as the one we had ordered a week
+            prior. Not only did they find the original order, but we also
+            received it in time. Excellent!"
+          </p>
+        </div>
+        <div class="testimonial">
+          <div class="info">
+            <div class="user-info">
+              <img
+                src="./images/image-irene.jpg"
+                alt="Irene Roberts"
+                class="user-image"
+              />
+              <div class="user-details">
+                <h3 class="user-name">Irene Roberts</h3>
+                <p class="user-role">Verified Buyer</p>
+              </div>
+            </div>
+          </div>
+          <p class="story">
+            "Customer service is always excellent and very quick turn around.
+            Completely delighted with the simplicity of the purchase and the
+            speed of delivery."
+          </p>
+        </div>
+        <div class="testimonial">
+          <div class="info">
+            <div class="user-info">
+              <img
+                src="./images/image-anne.jpg"
+                alt="Colton Smith"
+                class="user-image"
+              />
+              <div class="user-details">
+                <h3 class="user-name">anne-wallace</h3>
+                <p class="user-role">Verified Buyer</p>
+              </div>
+            </div>
+          </div>
+          <p class="story">
+            "Put an order with this company and can only praise them for the
+            very high standard. Will definitely use them again and recommend
+            them to everyone!"
+          </p>
+        </div>
       </div>
     </section>
-
-    Rated 5 Stars in Reviews Rated 5 Stars in Report Guru Rated 5 Stars in
-    BestTech Colton Smith Verified Buyer "We needed the same printed design as
-    the one we had ordered a week prior. Not only did they find the original
-    order, but we also received it in time. Excellent!" Irene Roberts Verified
-    Buyer "Customer service is always excellent and very quick turn around.
-    Completely delighted with the simplicity of the purchase and the speed of
-    delivery." Anne Wallace Verified Buyer "Put an order with this company and
-    can only praise them for the very high standard. Will definitely use them
-    again and recommend them to everyone!"
 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">César Yeguez</a>
     </div>
   </body>
 </html>
