--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         color: hsl(228, 45%, 44%);
       }
     </style>
+    <link rel="stylesheet" href="fonts.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <section class="social-proof-section">
