Definie estilos para desktop

--- a/index.html
+++ b/index.html
@@ -14,16 +14,6 @@
 
     <title>Frontend Mentor | Social proof section</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
     <link rel="stylesheet" href="fonts.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -79,19 +69,18 @@
 
       <div class="testimonials">
         <div class="testimonial">
-          <div class="info">
-            <div class="user-info">
-              <img
-                src="./images/image-colton.jpg"
-                alt="Colton Smith"
-                class="user-image"
-              />
-              <div class="user-details">
-                <h3 class="user-name">Colton Smith</h3>
-                <p class="user-role">Verified Buyer</p>
-              </div>
+          <div class="user-info">
+            <img
+              src="./images/image-colton.jpg"
+              alt="Colton Smith"
+              class="user-image"
+            />
+            <div class="user-details">
+              <h3 class="user-name">Colton Smith</h3>
+              <p class="user-role">Verified Buyer</p>
             </div>
           </div>
+
           <p class="story">
             "We needed the same printed design as the one we had ordered a week
             prior. Not only did they find the original order, but we also
@@ -99,19 +88,18 @@
           </p>
         </div>
         <div class="testimonial">
-          <div class="info">
-            <div class="user-info">
-              <img
-                src="./images/image-irene.jpg"
-                alt="Irene Roberts"
-                class="user-image"
-              />
-              <div class="user-details">
-                <h3 class="user-name">Irene Roberts</h3>
-                <p class="user-role">Verified Buyer</p>
-              </div>
+          <div class="user-info">
+            <img
+              src="./images/image-irene.jpg"
+              alt="Irene Roberts"
+              class="user-image"
+            />
+            <div class="user-details">
+              <h3 class="user-name">Irene Roberts</h3>
+              <p class="user-role">Verified Buyer</p>
             </div>
           </div>
+
           <p class="story">
             "Customer service is always excellent and very quick turn around.
             Completely delighted with the simplicity of the purchase and the
@@ -119,19 +107,18 @@
           </p>
         </div>
         <div class="testimonial">
-          <div class="info">
-            <div class="user-info">
-              <img
-                src="./images/image-anne.jpg"
-                alt="Colton Smith"
-                class="user-image"
-              />
-              <div class="user-details">
-                <h3 class="user-name">anne-wallace</h3>
-                <p class="user-role">Verified Buyer</p>
-              </div>
+          <div class="user-info">
+            <img
+              src="./images/image-anne.jpg"
+              alt="Colton Smith"
+              class="user-image"
+            />
+            <div class="user-details">
+              <h3 class="user-name">anne-wallace</h3>
+              <p class="user-role">Verified Buyer</p>
             </div>
           </div>
+
           <p class="story">
             "Put an order with this company and can only praise them for the
             very high standard. Will definitely use them again and recommend
@@ -141,11 +128,11 @@
       </div>
     </section>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">César Yeguez</a>
-    </div>
+    </footer>
   </body>
 </html>
