--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">César Yeguez</a>
+      >. Coded by <a href="https://cesaryeguezporfolio.netlify.app/">César Yeguez</a>
     </footer>
   </body>
 </html>
