--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
+    <meta
+      name="description"
+      content="Frontend Mentor | Social proof section challenge solution"
+    />
+    <meta name="author" content="César Yeguez" />
+    <meta name="keywords" content="HTML, CSS, Frontend Mentor, Challenge" />
+    <meta name="theme-color" content="#ffffff" />
     <link
       rel="icon"
       type="image/png"
@@ -18,121 +23,120 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="social-proof-section">
-      <div class="container">
-        <!-- Encabezado y descripción -->
-        <div class="header">
-          <h1 class="title">10,000+ of our users love our products.</h1>
-          <p class="description">
-            We only provide great products combined with excellent customer
-            service. See what our satisfied customers are saying about our
-            services.
-          </p>
+    <main>
+      <section class="social-proof-section">
+        <div class="container">
+          <!-- Encabezado y descripción -->
+          <header class="header">
+            <h1 class="title">10,000+ of our users love our products.</h1>
+            <p class="description">
+              We only provide great products combined with excellent customer
+              service. See what our satisfied customers are saying about our
+              services.
+            </p>
+          </header>
+          <!-- Calificaciones de estrellas -->
+          <aside class="ratings">
+            <div class="rating">
+              <div class="stars">
+                <img src="./images/icon-star.svg" alt="start" />
+                <img src="./images/icon-star.svg" alt="start" />
+                <img src="./images/icon-star.svg" alt="start" />
+                <img src="./images/icon-star.svg" alt="start" />
+                <img src="./images/icon-star.svg" alt="start" />
+              </div>
+              <p class="rating-text">Rated 5 Stars in Reviews</p>
+            </div>
+            <div class="rating">
+              <div class="stars">
+                <img src="./images/icon-star.svg" alt="start" />
+                <img src="./images/icon-star.svg" alt="start" />
+                <img src="./images/icon-star.svg" alt="start" />
+                <img src="./images/icon-star.svg" alt="start" />
+                <img src="./images/icon-star.svg" alt="start" />
+              </div>
+              <p class="rating-text">Rated 5 Stars in Report Guru</p>
+            </div>
+            <div class="rating">
+              <div class="stars">
+                <img src="./images/icon-star.svg" alt="start" />
+                <img src="./images/icon-star.svg" alt="start" />
+                <img src="./images/icon-star.svg" alt="start" />
+                <img src="./images/icon-star.svg" alt="start" />
+                <img src="./images/icon-star.svg" alt="start" />
+              </div>
+              <p class="rating-text">Rated 5 Stars in BestTech</p>
+            </div>
+          </aside>
         </div>
-
-        <!-- Calificaciones de estrellas -->
-        <div class="ratings">
-          <div class="rating">
-            <div class="stars">
-              <img src="./images/icon-star.svg" alt="start" />
-              <img src="./images/icon-star.svg" alt="start" />
-              <img src="./images/icon-star.svg" alt="start" />
-              <img src="./images/icon-star.svg" alt="start" />
-              <img src="./images/icon-star.svg" alt="start" />
+        <!-- Testimonios de usuarios-->
+        <section class="testimonials">
+          <article class="testimonial">
+            <div class="user-info">
+              <img
+                src="./images/image-colton.jpg"
+                alt="Colton Smith"
+                class="user-image"
+              />
+              <div class="user-details">
+                <h3 class="user-name">Colton Smith</h3>
+                <p class="user-role">Verified Buyer</p>
+              </div>
             </div>
-            <p class="rating-text">Rated 5 Stars in Reviews</p>
-          </div>
-          <div class="rating">
-            <div class="stars">
-              <img src="./images/icon-star.svg" alt="start" />
-              <img src="./images/icon-star.svg" alt="start" />
-              <img src="./images/icon-star.svg" alt="start" />
-              <img src="./images/icon-star.svg" alt="start" />
-              <img src="./images/icon-star.svg" alt="start" />
+            <p class="story">
+              "We needed the same printed design as the one we had ordered a
+              week prior. Not only did they find the original order, but we also
+              received it in time. Excellent!"
+            </p>
+          </article>
+          <article class="testimonial">
+            <div class="user-info">
+              <img
+                src="./images/image-irene.jpg"
+                alt="Irene Roberts"
+                class="user-image"
+              />
+              <div class="user-details">
+                <h3 class="user-name">Irene Roberts</h3>
+                <p class="user-role">Verified Buyer</p>
+              </div>
             </div>
-            <p class="rating-text">Rated 5 Stars in Report Guru</p>
-          </div>
-          <div class="rating">
-            <div class="stars">
-              <img src="./images/icon-star.svg" alt="start" />
-              <img src="./images/icon-star.svg" alt="start" />
-              <img src="./images/icon-star.svg" alt="start" />
-              <img src="./images/icon-star.svg" alt="start" />
-              <img src="./images/icon-star.svg" alt="start" />
+            <p class="story">
+              "Customer service is always excellent and very quick turn around.
+              Completely delighted with the simplicity of the purchase and the
+              speed of delivery."
+            </p>
+          </article>
+          <article class="testimonial">
+            <div class="user-info">
+              <img
+                src="./images/image-anne.jpg"
+                alt="Anne Wallace"
+                class="user-image"
+              />
+              <div class="user-details">
+                <h3 class="user-name">anne-wallace</h3>
+                <p class="user-role">Verified Buyer</p>
+              </div>
             </div>
-            <p class="rating-text">Rated 5 Stars in BestTech</p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Testimonios de usuarios-->
-
-      <div class="testimonials">
-        <div class="testimonial">
-          <div class="user-info">
-            <img
-              src="./images/image-colton.jpg"
-              alt="Colton Smith"
-              class="user-image"
-            />
-            <div class="user-details">
-              <h3 class="user-name">Colton Smith</h3>
-              <p class="user-role">Verified Buyer</p>
-            </div>
-          </div>
-
-          <p class="story">
-            "We needed the same printed design as the one we had ordered a week
-            prior. Not only did they find the original order, but we also
-            received it in time. Excellent!"
-          </p>
-        </div>
-        <div class="testimonial">
-          <div class="user-info">
-            <img
-              src="./images/image-irene.jpg"
-              alt="Irene Roberts"
-              class="user-image"
-            />
-            <div class="user-details">
-              <h3 class="user-name">Irene Roberts</h3>
-              <p class="user-role">Verified Buyer</p>
-            </div>
-          </div>
-
-          <p class="story">
-            "Customer service is always excellent and very quick turn around.
-            Completely delighted with the simplicity of the purchase and the
-            speed of delivery."
-          </p>
-        </div>
-        <div class="testimonial">
-          <div class="user-info">
-            <img
-              src="./images/image-anne.jpg"
-              alt="Colton Smith"
-              class="user-image"
-            />
-            <div class="user-details">
-              <h3 class="user-name">anne-wallace</h3>
-              <p class="user-role">Verified Buyer</p>
-            </div>
-          </div>
-
-          <p class="story">
-            "Put an order with this company and can only praise them for the
-            very high standard. Will definitely use them again and recommend
-            them to everyone!"
-          </p>
-        </div>
-      </div>
-    </section>
+            <p class="story">
+              "Put an order with this company and can only praise them for the
+              very high standard. Will definitely use them again and recommend
+              them to everyone!"
+            </p>
+          </article>
+        </section>
+      </section>
+    </main>
 
     <footer class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        rel="noopener noreferrer"
         >Frontend Mentor</a
-      >. Coded by <a href="https://cesaryeguezporfolio.netlify.app/">César Yeguez</a>
+      >. Coded by <a href="#">César Yeguez</a>
     </footer>
   </body>
 </html>
